maze.shortestpath.ShortestPathMaze.scala.code
def trouveDonut() : (Int, Int) = {
  var i : Int = 0 
  var j : Int = 0 
  while (!aBiscuit(i,j)){
    if (i==getMondeLargeur()-1){
      i=0
      j=j+1
    }
    i=i+1
  }
  val nbCase : Int = getMondeLargeur()*getMondeHauteur()
  var done : Int = 1
  setIndication(i,j,0)
  return(i,j)
}

def Cartographie(i:Int, j:Int, done: Int) {
  
}

override def run() {
  val x : Int = trouveDonut()[0]
  val y : Int = trouveDonut()[1]
}